sending swagger working well
