# routes/index.js
@@ -2,6 +2,8 @@
 const express = require('express');
 const router = express.Router();
 
+router.use('/auth', require('../auth'));
+
 router.use('/books', require('./books'));
 router.use('/users', require('./users'));
 
